--- a/res/layout/activity_login.xml
+++ b/res/layout/activity_login.xml
@@ -83,4 +83,12 @@
         <requestFocus />
     </EditText>
 
+    <RadioButton
+        android:id="@+id/addall_radio"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignRight="@+id/pw_field"
+        android:layout_below="@+id/abunda_head"
+        android:text="@string/autoadd_radio" />
+
 </RelativeLayout>
