--- a/res/menu/lookup_and_add.xml
+++ b/res/menu/lookup_and_add.xml
@@ -1,9 +1,10 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
 
     <item
-        android:id="@+id/action_settings"
-        android:orderInCategory="100"
-        android:showAsAction="never"
-        android:title="@string/action_settings"/>
+        android:id="@+id/log_out"
+        android:title="@string/log_out"/>
+    <item
+        android:id="@+id/info"
+        android:title="@string/info"/>
 
 </menu>
