--- a/res/layout/activity_lookup_and_add.xml
+++ b/res/layout/activity_lookup_and_add.xml
@@ -22,6 +22,7 @@
         style="?android:attr/buttonStyleSmall"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/contScan"
         android:layout_alignTop="@+id/contScan"
         android:layout_marginLeft="16dp"
         android:layout_toRightOf="@+id/contScan"
