Added better user flow

--- a/res/layout/activity_lookup_and_add.xml
+++ b/res/layout/activity_lookup_and_add.xml
@@ -2,11 +2,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:background="@color/white"
     tools:context=".LookupAndAdd" >
 
     <TextView
@@ -24,7 +24,6 @@
         android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/contScan"
         android:layout_alignTop="@+id/contScan"
-        android:layout_marginLeft="16dp"
         android:layout_toRightOf="@+id/contScan"
         android:text="@string/button_add" />
 
@@ -34,7 +33,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
-        android:text="Scan Again" />
+        android:text="@string/scan_again" />
 
     <WebView
         android:id="@+id/webView1"
